--- a/markdown-github.css
+++ b/markdown-github.css
@@ -87,3 +87,17 @@ blockquote {
     color: #6a737d;
     border-left: 0.25em solid #dfe2e5;
 }
+
+pre {
+    padding: 16px;
+    overflow: auto;
+    font-size: 85%;
+    line-height: 1.45;
+    background-color: #f6f8fa;
+    border-radius: 3px;
+    
+}
+
+pre code {
+    color:#25292e;
+}
